--- a/site/web/app/themes/sd-theme/resources/assets/styles/layouts/_product.scss
+++ b/site/web/app/themes/sd-theme/resources/assets/styles/layouts/_product.scss
@@ -1,3 +1,3 @@
-body.single-sd-product .product-image {
+body.single-sd-product .featured-image {
   margin: 2em 0;
 }
